# pycookie

./: LICENCE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pylintrc  README.md  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
